--- a/index.html
+++ b/index.html
@@ -1,14 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-    <h1>
-        Welcome to html word
-    </h1>
-    
-</body>
+  </head>
+  <body>
+    <h1>Welcome to html word</h1>
+    <nav>
+      <ul>
+        <li><a href="#home"> Home </a></li>
+        <li><a href="#about"> About</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+    </nav>
+    <section id="home">
+      <h1>Welcome</h1>
+      <h4>Welcome to my homt pege</h4>
+      <iframe
+        width="560"
+        height="315"
+        src="https://www.youtube.com/embed/_3xbpCdftF8?si=jtmPyzyHpvRu8QFE"
+        title="YouTube video player"
+        frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+        referrerpolicy="strict-origin-when-cross-origin"
+        allowfullscreen
+      ></iframe>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+    </section>
+    <section id="Contact">
+        <b> contact us </b>
+        <img src=""
+
+    </section>
+
+  </body>
 </html>
