--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </section>
     <section id="Contact">
         <b> contact us </b>
-        <img src=""
+        <img src="Capture.2.PNG">
 
     </section>
 
